# BlindCommand

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  CORE_SPEC.md  DESIGN.md  LICENSE  MANIFEST.in  MAP_GEN_SPEC.md  MARKER_SPEC.md  PROMPTS.md  PR_BODY.md  README  RELEASE_NOTES.md  RTT_SPEC.md  Redistribution  STYLE_GUIDE.md  TECH_STACK.md  TILE_PROMPTS.md  UI_SPEC.md  USAGE.md  WORKFLOW.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  tile_preview.html
.github/workflows/: check.yml
data/: theme.json  theme_cjk.json  unit_config.json
data/maps/: map_01.json
src/: __init__.py  main.py
src/battle/: SPEC.md  __init__.py  ai.py  ai_old.py  battle_system.py  battle_system_old.py  command_queue.py  commander.py  commander_old.py  unit_manager.py  units.py
src/core/: __init__.py  constants.py  engine.py  event_bus.py  events.py  fog_of_war.py  game_loop.py  interfaces.py  map.py  map_generator.py  range_utils.py  types.py  unit_base.py
src/ui/: __init__.py  battle_log.py  command_panel.py  fog_renderer.py  generate_report_circle.py  level_select.py  main_window.py  map_widget.py  marker.py  marker_palette.py  result_screen.py  sounds.py
tests/: __init__.py  test_constants.py
tests/battle/: __init__.py  test_battle_system.py  test_commander.py  test_units.py
tests/core/: test_event_bus.py  test_fog.py  test_game_loop.py  test_map.py  test_range.py  test_unit_base.py
tests/integration/: __init__.py  test_smoke.py
